Switch to Maven; Update for Minecraft version 1.15.2